# rust-web-rss

./: .travis.yml  Cargo.toml  LICENCE  README.md  configuration.example.yaml
src/: configuration.rs  index_tests.rs  main.rs  podcast.rs  rss.rs
templates/: index.hbs
