[package]
name = "rust-web-rss"
version = "0.1.0"
authors = ["Alban Dericbourg <alban@dericbourg.net>"]
edition = "2018"

[dependencies]
rocket = "0.4.0"
chrono="0.4.6"
rss = { version = "1.0", features = ["from_url"] }
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.8"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["handlebars_templates"]
